<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sea_green_alt_50"
    tools:context=".view.WeatherActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_margin_16"
        android:layout_marginBottom="@dimen/padding_margin_16">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clShowWeatherForeCastDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/clShowWeatherButtons"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/clCurrentWeatherDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etCityName"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/padding_margin_16"
                    android:hint="@string/city_name_hint_text"
                    android:background="@drawable/bg_edit_text"
                    android:inputType="text"
                    android:padding="@dimen/padding_margin_4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <android.support.v7.widget.CardView
                    android:id="@+id/cvCurrentWeathreDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_margin_16"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/sea_green_alt_color"
                    app:cardCornerRadius="@dimen/padding_margin_4"
                    app:cardElevation="@dimen/padding_margin_4"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintTop_toBottomOf="@+id/etCityName">

                    <TextView
                        android:id="@+id/tvCurrentWeatherDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/padding_margin_16"
                        android:textColor="@color/colorWhite" />
                </android.support.v7.widget.CardView>

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/barChartForecast"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/forecastChart_height_180"
                    android:layout_margin="@dimen/padding_margin_16"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etCityName" />
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clShowWeatherButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clShowWeatherForeCastDetails">

        <Button
            android:id="@+id/btnGetCurrentWeather"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_margin_16"
            android:background="@drawable/button_style_round_corner"
            android:text="@string/get_current_weather_btn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnShowHourlyForcast"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_margin_32"
            android:background="@drawable/button_style_round_corner"
            android:text="@string/hourly_forcast_btn_text"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGetCurrentWeather" />

        <Button
            android:id="@+id/btnShowSixteenDaysForcast"
            android:background="@drawable/button_style_round_corner"
            style="@style/button_style"
            android:text="@string/sixteen_day_forcast_btn_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_margin_16"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/btnShowHourlyForcast" />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btnCloseApp"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_margin_16"
        android:background="@drawable/button_style_round_corner"
        android:text="@string/close_bn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clShowWeatherButtons" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>